[BUGFIX] Add missing spacers for frames aagain

--- a/Resources/Public/Css/bootstrap4-theme.css
+++ b/Resources/Public/Css/bootstrap4-theme.css
@@ -9901,10 +9901,20 @@ a.text-dark:hover, a.text-dark:focus {
   --frame-spacing-small-lg: 1.05rem;
   --frame-spacing-xl: 2.625rem;
   --frame-spacing-small-xl: 1.125rem;
+  --frame-outer-spacing-before: 0;
+  --frame-outer-spacing-after: 0;
+  --frame-outer-spacing-variant-none: 0rem;
+  --frame-outer-spacing-variant-extra-small: 1rem;
+  --frame-outer-spacing-variant-small: 1.5rem;
+  --frame-outer-spacing-variant-medium: 2rem;
+  --frame-outer-spacing-variant-large: 2.5rem;
+  --frame-outer-spacing-variant-extra-large: 3rem;
 }
 
 .frame {
   position: relative;
+  margin-top: var(--frame-outer-spacing-before);
+  margin-bottom: var(--frame-outer-spacing-after);
   padding-top: var(--frame-spacing);
   padding-bottom: var(--frame-spacing);
   color: var(--frame-color);
@@ -10249,12 +10259,12 @@ a.text-dark:hover, a.text-dark:focus {
   padding-right: var(--frame-spacing);
 }
 
-.frame-size-default.frame-background-primary:not(.frame-ruler-after):not(.frame-has-backgroundimage):not(.frame-layout-embedded) +
-.frame-size-default.frame-background-primary:not(.frame-ruler-before):not(.frame-has-backgroundimage):not(.frame-layout-embedded), .frame-size-default.frame-background-secondary:not(.frame-ruler-after):not(.frame-has-backgroundimage):not(.frame-layout-embedded) +
-.frame-size-default.frame-background-secondary:not(.frame-ruler-before):not(.frame-has-backgroundimage):not(.frame-layout-embedded), .frame-size-default.frame-background-light:not(.frame-ruler-after):not(.frame-has-backgroundimage):not(.frame-layout-embedded) +
-.frame-size-default.frame-background-light:not(.frame-ruler-before):not(.frame-has-backgroundimage):not(.frame-layout-embedded), .frame-size-default.frame-background-dark:not(.frame-ruler-after):not(.frame-has-backgroundimage):not(.frame-layout-embedded) +
-.frame-size-default.frame-background-dark:not(.frame-ruler-before):not(.frame-has-backgroundimage):not(.frame-layout-embedded), .frame-layout-embedded:not(.frame-ruler-after) + .frame-layout-embedded:not(.frame-ruler-before) {
-  margin-top: calc(-1 * var(--frame-spacing));
+.frame-size-default.frame-background-primary.frame-space-after-none:not(.frame-ruler-after):not(.frame-has-backgroundimage):not(.frame-layout-embedded) +
+.frame-size-default.frame-background-primary.frame-space-before-none:not(.frame-ruler-before):not(.frame-has-backgroundimage):not(.frame-layout-embedded), .frame-size-default.frame-background-secondary.frame-space-after-none:not(.frame-ruler-after):not(.frame-has-backgroundimage):not(.frame-layout-embedded) +
+.frame-size-default.frame-background-secondary.frame-space-before-none:not(.frame-ruler-before):not(.frame-has-backgroundimage):not(.frame-layout-embedded), .frame-size-default.frame-background-light.frame-space-after-none:not(.frame-ruler-after):not(.frame-has-backgroundimage):not(.frame-layout-embedded) +
+.frame-size-default.frame-background-light.frame-space-before-none:not(.frame-ruler-before):not(.frame-has-backgroundimage):not(.frame-layout-embedded), .frame-size-default.frame-background-dark.frame-space-after-none:not(.frame-ruler-after):not(.frame-has-backgroundimage):not(.frame-layout-embedded) +
+.frame-size-default.frame-background-dark.frame-space-before-none:not(.frame-ruler-before):not(.frame-has-backgroundimage):not(.frame-layout-embedded), .frame-layout-embedded.frame-space-after-none:not(.frame-ruler-after) + .frame-layout-embedded.frame-space-before-none:not(.frame-ruler-before) {
+  --frame-outer-spacing-before: calc(-1 * var(--frame-spacing));
 }
 
 .frame-background-primary {
@@ -10329,6 +10339,54 @@ a.text-dark:hover, a.text-dark:focus {
 
 .frame-backgroundimage-sepia {
   filter: sepia(1);
+}
+
+.frame-space-before-none {
+  --frame-outer-spacing-before: var(--frame-outer-spacing-variant-none);
+}
+
+.frame-space-after-none {
+  --frame-outer-spacing-after: var(--frame-outer-spacing-variant-none);
+}
+
+.frame-space-before-extra-small {
+  --frame-outer-spacing-before: var(--frame-outer-spacing-variant-extra-small);
+}
+
+.frame-space-after-extra-small {
+  --frame-outer-spacing-after: var(--frame-outer-spacing-variant-extra-small);
+}
+
+.frame-space-before-small {
+  --frame-outer-spacing-before: var(--frame-outer-spacing-variant-small);
+}
+
+.frame-space-after-small {
+  --frame-outer-spacing-after: var(--frame-outer-spacing-variant-small);
+}
+
+.frame-space-before-medium {
+  --frame-outer-spacing-before: var(--frame-outer-spacing-variant-medium);
+}
+
+.frame-space-after-medium {
+  --frame-outer-spacing-after: var(--frame-outer-spacing-variant-medium);
+}
+
+.frame-space-before-large {
+  --frame-outer-spacing-before: var(--frame-outer-spacing-variant-large);
+}
+
+.frame-space-after-large {
+  --frame-outer-spacing-after: var(--frame-outer-spacing-variant-large);
+}
+
+.frame-space-before-extra-large {
+  --frame-outer-spacing-before: var(--frame-outer-spacing-variant-extra-large);
+}
+
+.frame-space-after-extra-large {
+  --frame-outer-spacing-after: var(--frame-outer-spacing-variant-extra-large);
 }
 
 .frame-header {
